Committed ryandesign's patch for archivers/xdelta. Addresses #26225.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70881 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/archivers/xdelta/Portfile
+++ b/dports/archivers/xdelta/Portfile
@@ -4,6 +4,7 @@ PortSystem          1.0
 
 name                xdelta
 version             3.0z
+revision            1
 categories          archivers
 maintainers         perry openmaintainer
 platforms           darwin
@@ -14,7 +15,7 @@ long_description    ${description}
 license             GPLv2
 homepage            http://code.google.com/p/xdelta/
 
-livecheck.regex     "name=xdelta(.+)\.tar\.gz"
+livecheck.regex     {name=xdelta(.+)\.tar\.gz}
 livecheck.type      regex
 livecheck.url       ${homepage}
 
@@ -25,6 +26,14 @@ checksums           rmd160 05019804cf1e08709ef3581cf425a79937be17da
 
 use_configure       no
 
+variant universal {}
+if {[variant_isset universal]} {
+    set archflags ${configure.universal_cflags}
+} else {
+    set archflags ${configure.cc_archflags}
+}
+
+build.args          CC="${configure.cc} ${archflags}"
 build.target        xdelta3
 
 destroot {
