updated gtk-osx-application to 0.9.5
git-svn-id: https://svn.macports.org/repository/macports/trunk@70882 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gtk-osx-application/Portfile
+++ b/dports/devel/gtk-osx-application/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            gtk-osx-application
-version         0.9.4
+version         0.9.5
 categories      devel
 maintainers     elelay openmaintainer
 
@@ -21,10 +21,11 @@ platforms       darwin
 
 master_sites	http://sourceforge.net/projects/gtk-osx/files/GTK-OSX Build/
 distname	    ige-mac-integration-${version}
+use_bzip2       yes
 
-checksums           md5     f224cb52ed82b56dcad3ea9e26cb8ec0 \
-                    sha1    a69ceb11179c17045027ac6761f033f042dab006 \
-                    rmd160  16b97c8e819628fdc0aabb94f9bbc8d9e4fe6220
+checksums           md5     bd503b6e8626e09471e65cc8bc50ba7a \
+                    sha1    ae75e3f9270000adc28baaea7e5e1edd407cf90c \
+                    rmd160  6a28b7f5dc719bab973b72a5404524f9369104fd
 
 depends_build   port:pkgconfig
 
