- improve portfile and patch makefile according to discussion in http://trac.macports.org/ticket/26205#comment:17
git-svn-id: https://svn.macports.org/repository/macports/trunk@70885 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/makeicns/Portfile
+++ b/dports/graphics/makeicns/Portfile
@@ -5,11 +5,12 @@ PortSystem          1.0
 
 name                makeicns
 version             1.4
-
+revision            1
 categories          graphics
 maintainers         techno.ms:mk-macports pixilla.com:brad
 platforms           darwin
-
+supported_archs     ppc i386
+configure.universal_archs   ppc i386
 license             MIT
 
 description         This program lets you convert all kinds of images to Apple's icns format on the command line.
@@ -27,11 +28,25 @@ checksums           md5     37cc153f69b60625a03c322bd3bafef8 \
                     sha1    592c2c17fb3ad6f7b480878a2c5764953b69c125 \
                     rmd160  ccdfb493b63f19d508d3ef18aaad67b12c9eda70
 
+patchfiles          patch-Makefile.diff
+
 use_configure       no
 
-build.target
+variant universal {}
+if {[variant_isset universal]} {
+    set archflags ${configure.universal_cflags}
+} else {
+    set archflags ${configure.cc_archflags}
+}
+if {${configure.sdkroot} != ""} {
+    configure.ldflags-append "-isysroot ${configure.sdkroot}"
+}
+
 build.env           CC=${configure.cc} \
-                    CXX=${configure.cxx}
+                    CXX=${configure.cxx} \
+                    CFLAGS="${configure.cflags} ${archflags}" \
+                    CXXFLAGS="${configure.cxxflags} ${archflags}" \
+                    LDFLAGS="[join ${configure.ldflags}] ${archflags}"
 
 destroot {
     xinstall ${worksrcpath}/${name} ${destroot}${prefix}/bin/${name}
