--- a/dports/gnome/libxklavier/Portfile
+++ b/dports/gnome/libxklavier/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            libxklavier
-version         3.9
+version         5.0
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     libxklavier - utility library to make XKB stuff easier
 long_description    ${description}
@@ -14,20 +14,21 @@ platforms       darwin
 homepage        http://www.freedesktop.org/Software/LibXklavier
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     c8ff3ba6daf899be7ec2a626894852b9 \
-                sha1    f093950923361310f80c2c434f7cc1a17c09f301 \
-                rmd160  b92ce43e0c18183029aaf3d94b8960c022854f5d
+checksums       md5     134c7ea177ff901123b909de77394780 \
+                sha1    e914adc00a7b1d39c5057aa415a5181856a697ae \
+                rmd160  771dffe92efa1b992ea6ee78535c81d859a2b090
 
 use_bzip2       yes
 
-depends_lib \
-    port:libxml2 \
-    port:libiconv \
-    port:zlib \
-    path:lib/pkgconfig/glib-2.0.pc:glib2 \
-    port:xorg-libxkbfile
+depends_lib     port:libxml2 \
+                path:lib/pkgconfig/glib-2.0.pc:glib2 \
+                port:iso-codes \
+                port:xorg-libXi \
+                port:xorg-libxkbfile \
+                port:xkbcomp
 
-configure.args --disable-xkb-support
+configure.args  --x-includes=${prefix}/include \
+                --x-libraries=${prefix}/lib
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
