--- a/dports/gnome/libgnomekbd/Portfile
+++ b/dports/gnome/libgnomekbd/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name                libgnomekbd
-version             2.26.0
+version             2.30.2
 set branch          [join [lrange [split ${version} .] 0 1] .]
 description         Libgnomekbd is something new.
 long_description    Libgnomekbd is something new.
@@ -15,12 +15,12 @@ homepage            http://www.gnome.org/
 
 master_sites        gnome:sources/${name}/${branch}/
 
-checksums           md5     aee58c088c4fd980e1bf813ea813c156 \
-                    sha1    0b7543df516271e16198135323471b2107dca0ec \
-                    rmd160  0a4b5d133efc8b08482d1dc27cdf2ca56655fd48
+checksums           md5     2fe73ebfd40801655e0aa3f85cefa873 \
+                    sha1    474acc0ae87ac8eccadbf48b60fad885f9e271f7 \
+                    rmd160  fc1d96bf48283cbe0379a019d2aa3307f77e4f13
 
-depends_lib         port:libxklavier \
-                    port:libgnomeui
+depends_lib         port:gconf \
+                    port:libxklavier
 
 use_bzip2           yes
 
@@ -28,7 +28,8 @@ post-patch {
     reinplace "s|test capplet|capplet|" ${worksrcpath}/Makefile.in
 }
 
-configure.args      --mandir=${prefix}/share/man
+configure.args      --mandir=${prefix}/share/man \
+                    --disable-schemas-install
 
 variant no_x11 {
         configure.args-append --without-x
@@ -37,6 +38,11 @@ variant no_x11 {
 if {![variant_isset no_x11]} {
         configure.args-append --x-includes=${prefix}/include \
                               --x-libraries=${prefix}/lib
+}
+
+post-activate {
+        system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
+            gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
 
 livecheck.type    regex
