--- a/dports/gnome/gnome-settings-daemon/Portfile
+++ b/dports/gnome/gnome-settings-daemon/Portfile
@@ -3,8 +3,7 @@
 PortSystem 1.0
 
 name            gnome-settings-daemon
-version         2.26.1
-revision        1
+version         2.30.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     Gnome 2 settings daemon.
 long_description ${description}
@@ -13,13 +12,14 @@ categories      gnome
 platforms       darwin
 homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
-checksums           md5     7be383de54c0707c64843ae51563c43a \
-                    sha1    0c2cef37a0a3333c314a8205cefea9edb8f0669a \
-                    rmd160  5cca5fdcbf144d6fc950c5b5f7d5f1304168f4bd
+
+checksums       md5     b945b1f542167c201a11f0ba1e1a4739 \
+                sha1    75fe75eaa7d6197514c1de8b8c47c869f2bade2c \
+                rmd160  a4547cdb13c2c5dc8f690cf198853129514adaab
 
 depends_lib     port:gnome-desktop \
                 port:libgnomekbd \
-                port:gst-plugins-good
+                port:libnotify
 
 depends_build	port:gnome-doc-utils
 
@@ -31,7 +31,20 @@ pre-configure {
     reinplace "s|-bundle|-bundle -undefined dynamic_lookup|g" ${worksrcpath}/configure
 }
 
-configure.args  --enable-gstreamer
+configure.args  --x-includes=${prefix}/include \
+                --x-libraries=${prefix}/lib \
+                --disable-schemas-install
+
+#
+# port gnome-desktop is not universal
+#
+
+universal_variant no
+
+post-activate    {
+    system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
+        gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
+}
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/GNOME/sources/${name}/${branch}/
