gucharmap: update to version 2.30.2, use python26.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70889 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gucharmap/Portfile
+++ b/dports/gnome/gucharmap/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		gucharmap
-version         2.30.1
+version         2.30.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	gucharmap is a featureful unicode character map.
 long_description ${description}
@@ -14,9 +14,9 @@ platforms       darwin
 homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     cd3b342fb75b4bd9df2327c247aa457b \
-                sha1    f9db12ca1102a245e701b579be1c5d9ebed0cd0d \
-                rmd160  c02f0105c8f5dbb769ff2c411e7dc085c87e8bd9
+checksums       md5     f997f6e6ba970fef7ec704da06e2de80 \
+                sha1    3f6c2654a50d5f94ddfd68dd13659402eace9ddd \
+                rmd160  40bdab50d8e1f19f1d1e57418c6b486b0a6955eb
 
 depends_build   port:pkgconfig \
                 port:intltool \
@@ -25,16 +25,26 @@ depends_build   port:pkgconfig \
                 port:gtk-doc
 
 depends_lib     port:gconf \
-                port:py25-gtk
+                port:py26-gtk
 
 use_bzip2       yes
 
-configure.args	--disable-gtk-immodules \
-                --disable-schemas-install \
+patchfiles      patch-configure.diff
+
+configure.args	--disable-schemas-install \
                 --disable-scrollkeeper \
+                --disable-introspection \
                 --enable-python-bindings
 
-configure.python ${prefix}/bin/python2.5
+configure.python ${prefix}/bin/python2.6
+set python_framework ${frameworks_dir}/Python.framework/Versions/2.6
+configure.pkg_config_path ${python_framework}/lib/pkgconfig
+
+#
+# py26-gtk -> py26-cairo -> py26-numpy -> atlas is not universal
+#
+
+universal_variant no
 
 post-activate	{
     system "${prefix}/bin/scrollkeeper-update"
