--- a/dports/graphics/makeicns/Portfile
+++ b/dports/graphics/makeicns/Portfile
@@ -5,11 +5,11 @@ PortSystem          1.0
 
 name                makeicns
 version             1.4
-revision            1
+revision            2
 categories          graphics
 maintainers         techno.ms:mk-macports pixilla.com:brad
 platforms           darwin
-supported_archs     ppc i386
+supported_archs     ppc i386 x86_64
 configure.universal_archs   ppc i386
 license             MIT
 
