--- a/dports/gnome/goffice/Portfile
+++ b/dports/gnome/goffice/Portfile
@@ -4,8 +4,7 @@
 PortSystem              1.0
 
 name                    goffice
-version                 0.6.6
-revision                2
+version                 0.8.0
 set branch              [join [lrange [split ${version} .] 0 1] .]
 description             GOffice is a library of document-centric objects and utilities.
 long_description        GOffice is a library of document-centric objects \
@@ -17,10 +16,11 @@ platforms               darwin
 homepage                http://freshmeat.net/projects/goffice/
 master_sites            gnome:sources/${name}/${branch}/
 use_bzip2               yes
-checksums               md5     92e51878b9cd9c2fa954953d708f2c47 \
-                        sha1    ac3b768198ee13264ddd26bc7b039d9788c14ad7 \
-                        rmd160  672bce0f1485f373417ec84a580a1d8551ea86d2
+checksums               md5     afb3fcb152fb37ed433f30d1ed1e86e3 \
+                        sha1    8a5540f91cb1619ee1d96ee65856e81624743acd
 
+depends_build           port:intltool \
+                        port:pkgconfig
 depends_lib             port:libart_lgpl \
                         port:bzip2 \
                         port:expat \
