add missing dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@70895 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/vips/Portfile
+++ b/dports/graphics/vips/Portfile
@@ -22,6 +22,7 @@ configure.args	--enable-gtk-doc
 universal_variant no
 
 depends_build	port:pkgconfig \
+                port:libtool \
 		port:gtk-doc
 
 depends_lib	port:fftw-3 \
