nip2: maintainer update to 7.20.5, #22585
git-svn-id: https://svn.macports.org/repository/macports/trunk@70896 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/nip2/Portfile
+++ b/dports/graphics/nip2/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name		nip2
-version		7.18.1
+version		7.20.5
 set branch	[join [lrange [split ${version} .] 0 1] .]
 description	nip2 is a user-interface to the VIPS image processing library.
 long_description	nip2 is an image processing spreadsheet. It's good for \
@@ -13,9 +13,13 @@ categories	graphics
 platforms	darwin
 homepage	http://www.vips.ecs.soton.ac.uk
 master_sites	${homepage}/supported/${branch}/
-checksums	md5 260feaf199490dd3a7c209931eb0c52f
+checksums	md5 0e5af5b8e0adbef71aa439820dfd8d87
 
+configure.args	--disable-update-desktop
+
+depends_build       port:pkgconfig
 depends_lib	port:fftw-3 \
 		port:vips \
 		port:gtk2 \
+		port:goffice \
 		port:gsl
