Patch 'orc' to dynamically test for and use the functions 'posix_memalign' and 'valloc'.  Addresses ticket #26209.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70897 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/orc/Portfile
+++ b/dports/devel/orc/Portfile
@@ -16,6 +16,10 @@ checksums           md5     0228f053f0743efd69126cdd4ff92424 \
                     sha1    b1078d4dde51cb413f637a9c8b2845f8cc3ffd9a \
                     rmd160  360cdda369d8b146774e32c4d1d7a8879be0155c
 
+patchfiles          patch-configure.diff \
+                    patch_orc-test_orcarray.c.diff \
+                    patch-config.h.in.diff
+
 livecheck.type      regex
 livecheck.url       ${master_sites}
 livecheck.regex     "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
