patch for 64-bits by maintainer, #23047
git-svn-id: https://svn.macports.org/repository/macports/trunk@70898 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/CocoaDialog/Portfile
+++ b/dports/aqua/CocoaDialog/Portfile
@@ -4,6 +4,7 @@ PortSystem	1.0
 PortGroup	xcode 1.0
 
 name		CocoaDialog
+revision    1
 version		2.1.1
 categories	aqua sysutils
 maintainers	me.com:tsupplis
@@ -22,6 +23,11 @@ distname		${name}-src-${version}
 checksums		md5 c6d9b49a1aee3cea16d0f6da7f37cedf \
 				sha1 d04fd9bf821cfdf85b8a6cbcce5872290a4a14b3 \
 				rmd160 326929352d81807ab3362cc806972ee4e1de9e47
+
+patchfiles      patch-CDControl.h patch-CDControl.m \
+                patch-AppController.h patch-AppController.m \
+                patch-KABubbleWindow.m patch-KABubbleWindowView.h \
+                patch-KABubbleWindowView.m
 
 worksrcdir		cocoadialog
 
