--- a/dports/gnome/grisbi/Portfile
+++ b/dports/gnome/grisbi/Portfile
@@ -1,9 +1,10 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
 
 name		grisbi
-version		0.5.9
+version             0.6.0
 description       Easy Personnal Finance Manager for All.
 long_description  Grisbi is a personnal accounting application. \
 		  Grisbi can manage multiple accounts, currencies and users. It manages \
@@ -15,12 +16,19 @@ maintainers	grisbi.org:gerald
 categories	gnome
 platforms	darwin
 homepage	http://www.grisbi.org
-master_sites	sourceforge
-checksums	md5 040fd41c01b9075f84b7edb9b009bb67
+checksums           sha1    d76973eaa068827d0239b2a6d7c411f78ae743fb \
+                    rmd160  dedd2375136b36ab69026f42207cecb18c74190f
+master_sites        http://grisbi.gegeweb.org/src/${version} \
+                    sourceforge
 depends_lib	lib:libgtk.2:gtk2 lib:libxml2.2.6.16:libxml2 lib:libofx.0:libofx
 use_bzip2	yes
-configure.args	--mandir=${prefix}/share/man
-configure.cppflags-append "-L${prefix}/lib"
+
+configure.args              --mandir=${prefix}/share/man
+configure.args-append       --with-balance-estimate
+configure.cppflags-append   "	-L${prefix}/lib"
+
+universal_variant   no
+supported_archs     ppc i386
 
 variant no_ofx description {Don't include LibOFX support} {
 	depends_lib-delete	lib:libofx.0:libofx
