fix build error, #23429
git-svn-id: https://svn.macports.org/repository/macports/trunk@70901 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-pyicu/Portfile
+++ b/dports/python/py25-pyicu/Portfile
@@ -25,7 +25,7 @@ checksums       md5     789092993f84ccd6ba21d7346d6e093d \
                 sha1    f8f3c8821cb90442ba6637530592e91929efdf6d \
                 rmd160  af38047ab04824fab52f529454528cf7dd71d520
 
-patchfiles      patch-setup.py
+patchfiles      patch-setup.py patch-fix-ticket-23429
 
 post-patch {
         reinplace "s|@PREFIX@|${prefix}|g" ${worksrcpath}/setup.py
