libtorrent-rasterbar: apply upstream fix for compatibility with boost 1.44.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70903 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/libtorrent-rasterbar/Portfile
+++ b/dports/net/libtorrent-rasterbar/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            libtorrent-rasterbar
 version         0.15.2
+revision        1
 categories      net
 maintainers     devans openmaintainer
 platforms       darwin
@@ -65,7 +66,8 @@ pre-extract {
         }
 }
 
-patchfiles      patch-bindings-python-setup.py.in.diff
+patchfiles      patch-bindings-python-setup.py.in.diff \
+                patch-include-libtorrent-udp_socket.hpp.diff
 
 post-patch      {
                     reinplace "s|__MP_BUILD_ARCH__|${build_arch}|" ${worksrcpath}/bindings/python/setup.py.in
