eggdbus: libxslt and docbook-xsl are build dependencies. (#26058)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70905 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/eggdbus/Portfile
+++ b/dports/devel/eggdbus/Portfile
@@ -24,11 +24,11 @@ checksums       md5     b43d2a6c523fcb8b9d0b0300c4222386 \
 patchfiles      patch-configure.diff
 
 depends_build   port:pkgconfig \
+                port:libxslt \
+                port:docbook-xsl \
                 port:gtk-doc
 
-depends_lib     port:dbus-glib \
-                port:docbook-xsl \
-                port:libxslt
+depends_lib     port:dbus-glib
 
 livecheck.type  regex
 livecheck.url   ${master_sites}
