sleepwatcher: fix livecheck; see #26236
git-svn-id: https://svn.macports.org/repository/macports/trunk@70906 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/sleepwatcher/Portfile
+++ b/dports/sysutils/sleepwatcher/Portfile
@@ -62,4 +62,4 @@ pre-fetch {
 }
 
 livecheck.type          regex
-livecheck.regex         ${name}_(\[0-9.\]+)\\.dmg
+livecheck.regex         (?i)>${name} (\[0-9.\]+)<
