--- a/dports/devel/diffstat/Portfile
+++ b/dports/devel/diffstat/Portfile
@@ -3,9 +3,9 @@
 PortSystem 1.0
 
 name                    diffstat
-version                 1.51
+version                 1.53
 categories              devel
-maintainers             nomaintainer
+maintainers             toby
 description             Make histogram from diff-output
 long_description        diffstat reads the output of diff and displays a histogram\
                         of the insertions, deletions, and modifications per-file.\
@@ -14,9 +14,9 @@ homepage                http://invisible-island.net/diffstat/
 platforms               darwin
 master_sites            ftp://invisible-island.net/diffstat/
 extract.suffix          .tgz
-checksums               md5 a7d3fd1ba2a9a6c9e2b32e867b5e8792 \
-                        sha1 4d0d3a3a2dae4d4a53f5a2a913d4c349d79fdd83 \
-                        rmd160 1e8baf30bb56165219daef6a9246bc2edc4896d5
+checksums               md5 0631010aa598a8011259749dd882936a \
+                        sha1 d4664857b64fe81c1ef35b4f4afc81c774513597 \
+                        rmd160 37e5f407042c54613e2b76356b2230ad84cab6af
 
 configure.args          --mandir=${prefix}/share/man
 
