--- a/dports/gnome/system-tools-backends/Portfile
+++ b/dports/gnome/system-tools-backends/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            system-tools-backends
-version         2.6.1
+version         2.10.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nomaintainer
 categories      gnome
@@ -24,14 +24,15 @@ homepage        http://system-tools-backends.freedesktop.org/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2       yes
 
-checksums       md5     c82a9d305c3a1bf924bba6b1bced3e86 \
-                sha1    fa49c81963ab8c522dfefb9a8c2ffda61380a01b \
-                rmd160  7fb3a97ef291f80b330ad5c7146d0cd32a264a74
+checksums       md5     bde46137761df8849d6ee176449f84f5 \
+                sha1    28fddaecaedeefa2e3d63e9f8bc8848d96477272 \
+                rmd160  ec73eb97c3f930dc2a04020d69bee2f3402338fe
 
 depends_build   port:pkgconfig \
                 port:p5-net-dbus
 
-depends_lib     port:libgnomeui \
+depends_lib     port:dbus-glib \
+                port:policykit
 
 depends_run     port:p5-net-dbus
 
