metacity: update to version 2.30.1.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70912 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/metacity/Portfile
+++ b/dports/gnome/metacity/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		metacity
-version		2.26.0
+version		2.30.1
 set branch  [join [lrange [split ${version} .] 0 1] .]
 description	A window manager for the adult in you.
 long_description        ${description}
@@ -14,24 +14,28 @@ platforms	darwin
 homepage	http://www.gnome.org
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     eafb624e79fbcdab6da59acc222430b1 \
-                sha1    70593f69148960a0248527c8ae8d442a3d251d08 \
-                rmd160  26b75abb9b705f9fd7711dfbbff134e600dcfd56
+checksums       md5     3d3c05c60b70b9d06b30872e756c31ba \
+                sha1    d963931d69da258adfc9aba3e5cd8cb95f9fddf3 \
+                rmd160  4f83b671a75606723cc8a02196a257a65a53ae00
 
 depends_lib     port:gconf \
                 port:startup-notification \
-   	        port:gnome-themes \
-                port:zenity
+                port:libgtop \
+                port:libcanberra \
+                port:xorg-libsm
 
 depends_build   port:gnome-doc-utils \
 	        port:pkgconfig
 
 use_bzip2 	yes
 
+patchfiles      patch-src-core-main.c.diff
+
 configure.args  --mandir=${prefix}/share/man \
                 --x-includes=${prefix}/include \
                 --x-libraries=${prefix}/lib \
-                --disable-scrollkeeper
+                --disable-scrollkeeper \
+                --disable-schemas-install
 
 pre-fetch {
     if {![file exists $prefix/lib/libgdk-x11-2.0.dylib]} {
@@ -40,8 +44,12 @@ pre-fetch {
     }
 }
 
+universal_variant no
+
 post-activate {
 	system "${prefix}/bin/scrollkeeper-update"
+        system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
+                gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
 
 livecheck.type  regex
