nautilus: update to version 2.30.1.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70913 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/nautilus/Portfile
+++ b/dports/gnome/nautilus/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		nautilus
-version		2.26.4
+version		2.30.1
 set branch  [join [lrange [split ${version} .] 0 1] .]
 description	The GNOME filemanager
 long_description       	Nautilus is the official file manager for the \
@@ -15,9 +15,10 @@ categories	gnome
 platforms	darwin
 homepage	http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
-checksums       md5     cc5bbaf3776662ed45bcf33b3857f662 \
-                sha1    7eab587e0b88e3eab8196f64596207a1dc1c4b33 \
-                rmd160  4af723021ece1fb9a37bd3bcc2de903b6c7dca61
+
+checksums       md5     e1bda55f9c6cd223561da066dbc4e863 \
+                sha1    232afa5d7d977714667645adff1f952989edc185 \
+                rmd160  285e0b9d000725b11013ed6f8e98db59573b83dc
 
 depends_build   port:pkgconfig \
                 port:intltool \
@@ -26,9 +27,10 @@ depends_build   port:pkgconfig \
                 port:gtk-doc
 
 depends_lib	port:gnome-desktop \
+                port:libxml2 \
+                port:libunique \
                 port:libexif \
-                port:exempi \
-                port:libunique
+                port:exempi
 
 depends_run	port:desktop-file-utils \
 	        port:shared-mime-info
@@ -43,9 +45,13 @@ configure.args  --mandir=${prefix}/share/man \
                 --x-libraries=${prefix}/lib \
                 --disable-update-mimedb \
                 --disable-schemas-install \
-                --disable-tracker \
-                --disable-packagekit \
-                --disable-beagle
+                --disable-packagekit
+
+#
+# port gnome-desktop is not universal
+#
+
+universal_variant no
 
 post-activate {
     system "${prefix}/bin/update-desktop-database -q ${prefix}/share/applications; true"
