shells/bash: Fix 'BUG IN CLIENT OF LIBDISPATCH: Do not close random Unix descriptors', see #25693 Discussion on http://lists.gnu.org/archive/html/bug-bash/2010-08/msg00157.html
git-svn-id: https://svn.macports.org/repository/macports/trunk@70914 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/shells/bash/Portfile
+++ b/dports/shells/bash/Portfile
@@ -6,6 +6,7 @@ name                bash
 set bash_version    4.1
 set bash_patchlevel 7
 version             ${bash_version}.${bash_patchlevel}
+revision            1
 distname            ${name}-${bash_version}
 categories          shells
 maintainers         raimue
@@ -26,6 +27,8 @@ checksums           ${distname}${extract.suffix} \
                     md5     9800d8724815fd84994d9be65ab5e7b8 \
                     sha1    3bd1ec9c66f3689f6b3495bdaaf9077b2e5dc150 \
                     rmd160  554c7ecb4a63da431768caed1f958c06b8fa7207
+
+patchfiles          patch-close-fds.diff
 
 # Generate patchfiles
 for {set i 1} {$i <= $bash_patchlevel} {incr i} {
