--- a/dports/gnome/gnome-themes/Portfile
+++ b/dports/gnome/gnome-themes/Portfile
@@ -5,10 +5,12 @@ PortSystem      1.0
 
 name            gnome-themes
 version         2.30.2
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     devans openmaintainer
 categories      gnome
 platforms       darwin
+supported_archs noarch
 description     A collection of themes and icons for GNOME 2 designed for accessibility.
 
 long_description \
@@ -33,8 +35,6 @@ depends_lib     port:gtk2 \
                 port:gnome-icon-theme
 
 configure.args  --enable-all-themes
-
-universal_variant   no
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/GNOME/sources/${name}/${branch}/
