libtomcrypt: update homepage and master_sites
git-svn-id: https://svn.macports.org/repository/macports/trunk@70917 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/libtomcrypt/Portfile
+++ b/dports/security/libtomcrypt/Portfile
@@ -1,6 +1,7 @@
 # $Id$
 
 PortSystem 1.0
+
 name             libtomcrypt
 version          1.12
 categories       security
@@ -12,9 +13,9 @@ long_description \
 	array of well known published block ciphers, one-way hash \
 	functions, chaining modes, pseudo-random number generators, \
 	public key cryptography and a plethora of other routines.
-homepage         http://libtomcrypt.org/
+homepage         http://libtom.org/
 platforms        darwin
-master_sites     http://libtomcrypt.com/files/
+master_sites     ${homepage}files/
 distname         crypt-${version}
 use_bzip2        yes
 checksums        sha1 db2bfed6b5194f919c93c1915e48a76379681f92
