makeicns: prepare for improved capabilities of Makefile currently in development (allowing properly configured universal build)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70918 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/makeicns/Portfile
+++ b/dports/graphics/makeicns/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                makeicns
 version             1.4
-revision            4
+revision            5
 categories          graphics
 maintainers         techno.ms:mk-macports pixilla.com:brad
 platforms           darwin
@@ -30,7 +30,10 @@ patchfiles          patch-Makefile.diff
 
 use_configure       no
 
-variant universal {}
+variant universal {
+    build.env-append BUILD_UNIVERSAL=yes
+}
+
 if {[variant_isset universal]} {
     set archflags ${configure.universal_cflags}
 } else {
