--- a/dports/security/libtomcrypt/Portfile
+++ b/dports/security/libtomcrypt/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name             libtomcrypt
-version          1.12
+version          1.17
 categories       security
 maintainers      nomaintainer
 description      cryptographic toolkit
@@ -18,15 +18,21 @@ platforms        darwin
 master_sites     ${homepage}files/
 distname         crypt-${version}
 use_bzip2        yes
-checksums        sha1 db2bfed6b5194f919c93c1915e48a76379681f92
+checksums        sha1 9c746822c84e4276e432b64964f94d1d5ddd13ad \
+                 rmd160 742d72d82fea2e6a9865d8c682c10cbaba69ea2f
 
 worksrcdir       ${name}-${version}
-
-patchfiles		patch-makefile
 
 use_configure    no
 
 build.target
+build.env        CC=${configure.cc} CFLAGS="${configure.cc_archflags}"
 
 destroot.args    LIBPATH=${prefix}/lib INCPATH=${prefix}/include \
-				USER=`id -u` GROUP=`id -g`
+                 USER=`id -u` GROUP=`id -g` NODOCS=1
+
+post-destroot {
+    # the makefile wants to rebuild this if you tell it to install it
+    xinstall -d ${destroot}${prefix}/share/doc/${name}
+    xinstall -m 444 ${worksrcpath}/doc/crypt.pdf ${destroot}${prefix}/share/doc/${name}
+}
