flip: adding missing master_sites variable (#26240)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70920 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/flip/Portfile
+++ b/dports/textproc/flip/Portfile
@@ -17,6 +17,7 @@ long_description \
 
 homepage        http://ccrma-www.stanford.edu/~craig/utility/flip/
 use_bzip2       yes
+master_sites    macports
 
 checksums       md5 27ddb3be9f81617c016aecb776513315 \
                 sha1 3cd1526d359d18fc3ae8cd6e57af25726ff56fc9 \
