mongodb: install client libraries and headers (fixes #26233)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70926 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/mongodb/Portfile
+++ b/dports/databases/mongodb/Portfile
@@ -46,7 +46,7 @@ post-patch {
 use_configure       no
 
 build.cmd           scons
-build.args          --usesm --cxx=${configure.cxx}
+build.args          --usesm --cxx=${configure.cxx} --full
 build.target        all mongobridge mongosniff
 
 destroot.cmd        scons
