--- a/dports/graphics/vips/Portfile
+++ b/dports/graphics/vips/Portfile
@@ -22,10 +22,10 @@ configure.args	--enable-gtk-doc
 universal_variant no
 
 depends_build	port:pkgconfig \
-                port:libtool \
 		port:gtk-doc
 
-depends_lib	port:fftw-3 \
+depends_lib	port:libtool \
+		port:fftw-3 \
 		path:lib/pkgconfig/glib-2.0.pc:glib2 \
 		port:jpeg \
 		port:libpng \
