--- a/dports/sysutils/e2fsprogs/Portfile
+++ b/dports/sysutils/e2fsprogs/Portfile
@@ -4,8 +4,7 @@ PortSystem                  1.0
 
 name                        e2fsprogs
 conflicts                   kerberos5
-version                     1.41.11
-revision                    1
+version                     1.41.12
 categories                  sysutils
 platforms                   darwin
 maintainers                 nomaintainer
@@ -20,12 +19,13 @@ long_description            Utilities to create, check and manipulate extended 2
 homepage                    http://e2fsprogs.sourceforge.net/
 master_sites                sourceforge
 
-checksums                   md5     fb507a40c2706bc38306f150d069e345 \
-                            sha1    1cd75560595cff0b7b5ac9da11cfdaa7d0dfd6d9 \
-                            rmd160  1190540e1df3b873faf2179ce8cbc618a91fc836
+checksums                   md5     1b24a21fc0c2381ef420961cbfec733f \
+                            sha1    62b002fe507b2ddafc24b89532e472fe4b55a14f \
+                            rmd160  aa7f9a2e350fcab85c72deaaee5fdc2a5e9fb6e7
 
 depends_build               port:pkgconfig
-depends_lib                 port:gettext
+depends_lib                 port:gettext \
+                            port:ossp-uuid
 
 patchfiles                  patch-lib__Makefile.darwin-lib
 
