evolution-data-server: remove configuration check for <et/com_err.h> which causes misconfiguration and breakage of the build when port e2fsprogs is installed, fixes #26244.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70931 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/evolution-data-server/Portfile
+++ b/dports/gnome/evolution-data-server/Portfile
@@ -34,7 +34,8 @@ depends_lib     port:gconf \
 
 use_bzip2       yes
 
-patchfiles      patch-configure.ac.diff
+patchfiles      patch-configure.ac.diff \
+                patch-m4-evo_krb5_support.m4.diff
 
 use_autoreconf    yes
 autoreconf.args  -fvi
