sleepwatcher: whitespace adjustments in descriptions
git-svn-id: https://svn.macports.org/repository/macports/trunk@70932 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/sleepwatcher/Portfile
+++ b/dports/sysutils/sleepwatcher/Portfile
@@ -14,15 +14,14 @@ distname                ${name}_${version}
 extract.suffix          .tgz
 xcode.destroot.path     ${prefix}/sbin
 
-description \
-    monitors sleep, wakeup and idleness of a Mac
+description             monitors sleep, wakeup and idleness of a Mac
 
-long_description \
-    SleepWatcher monitors sleep, wakeup and idleness of a Mac. It can be \
-    used to execute a Unix command when the Mac or the display of the Mac \
-    goes to sleep mode or wakes up or after a given time without user \
-    interaction. It also can send the Mac to sleep mode or retrieve the \
-    time since last user activity.
+long_description        SleepWatcher monitors sleep, wakeup and idleness of \
+                        a Mac. It can be used to execute a Unix command \
+                        when the Mac or the display of the Mac goes to sleep \
+                        mode or wakes up or after a given time without user \
+                        interaction. It also can send the Mac to sleep mode \
+                        or retrieve the time since last user activity.
 
 checksums               md5     d4ace64e2e978f4f289ca4dddd21c6f2 \
                         sha1    54d09ed7a25abd2f2a398bf7f17b0ddc70f1b1d9 \
