ruby/rb-rcairo: upgrade to 1.8.3
git-svn-id: https://svn.macports.org/repository/macports/trunk@70934 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/ruby/rb-rcairo/Portfile
+++ b/dports/ruby/rb-rcairo/Portfile
@@ -3,16 +3,16 @@
 PortSystem		1.0
 PortGroup		ruby 1.0
 
-ruby.setup		rcairo 1.8.0 extconf.rb {README COPYING GPL samples doc}
+ruby.setup		rcairo 1.8.3 extconf.rb {README.rdoc COPYING GPL samples doc}
 maintainers		kimuraw
 description		Ruby bindings for cairo
 long_description \
 		Ruby bindings for Cairo. Cairo is a 2D graphics library \
 		with support for multiple output devices.
 categories-append	graphics
-checksums		md5  7ea9f0b174d379c6a0374f534c2a4e85 \
-				rmd160 ef3656dcc52081a9d792e4812ad30a8b911aa695 \
-				sha1 de60c4c4c4fd9eeee6ab93a3ca3e0c2e785caafb
+checksums		md5  ddc6470c59c3a2adcda836544b4dc5bd \
+				rmd160 813b7efe3bb248bcb00e566fa131975d9b38f1e0 \
+				sha1 0b4bbfcb3080feb7afef6f6b12e634eff35f3a80
 platforms		darwin
 
 depends_lib-append		path:lib/pkgconfig/cairo.pc:cairo
