ruby/rb19-rcairo: upgrade to 1.8.3, fix install destination to "vendor_ruby"
git-svn-id: https://svn.macports.org/repository/macports/trunk@70935 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/ruby/rb19-rcairo/Portfile
+++ b/dports/ruby/rb19-rcairo/Portfile
@@ -3,23 +3,23 @@
 PortSystem		1.0
 PortGroup		ruby 1.0
 
-ruby.setup		rcairo 1.8.1 extconf.rb \
-				{README COPYING GPL samples doc} {} ruby19
+ruby.setup		rcairo 1.8.3 extconf.rb \
+				{README.rdoc COPYING GPL samples doc} {} ruby19
 maintainers		kimuraw
 description		Ruby bindings for cairo
 long_description \
 		Ruby bindings for Cairo. Cairo is a 2D graphics library \
 		with support for multiple output devices.
 categories-append	graphics
-checksums		md5  14efc24f0cbe281b32882d64f1b0d4b9 \
-				rmd160 e0e8681e3abd324c33c3e11c0df37f34e470d59c \
-				sha1 d5ea5ab624b9e00372cb7009e8cbfdae0e7d8c9a
+checksums		md5  ddc6470c59c3a2adcda836544b4dc5bd \
+				rmd160 813b7efe3bb248bcb00e566fa131975d9b38f1e0 \
+				sha1 0b4bbfcb3080feb7afef6f6b12e634eff35f3a80
 platforms		darwin
 
 depends_lib-append		path:lib/pkgconfig/cairo.pc:cairo
 configure.env-append 	PKG_CONFIG=${prefix}/bin/pkg-config
 configure.args-append	--vendor
-# patch-extconf.rb.diff: fix wrong location of cairo.bundle with ruby-1.9.2
+# patch-extconf.rb.diff: fix do not pass --vendor to ext/cario/extconf.rb
 patchfiles		patch-extconf.rb.diff
 
 homepage        http://cairographics.org/rcairo/
