php5: add reminder to increase revision of php5-eaccelerator when updating php5; see #26257
git-svn-id: https://svn.macports.org/repository/macports/trunk@70937 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/php5/Portfile
+++ b/dports/lang/php5/Portfile
@@ -4,6 +4,7 @@ PortSystem              1.0
 
 name                    php5
 conflicts               php5-devel php52
+# Update revision of php5-eaccelerator when updating version of php5
 epoch                   1
 version                 5.3.3
 revision                1
