netcdf: added cppflags, fflags and fcflags for g95 variants to function properly
git-svn-id: https://svn.macports.org/repository/macports/trunk@70939 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/netcdf/Portfile
+++ b/dports/science/netcdf/Portfile
@@ -6,7 +6,7 @@ PortSystem                  1.0
 name                        netcdf
 epoch                       1
 version                     4.1.1
-revision                    3
+revision                    4
 maintainers                 takeshi openmaintainer
 platforms                   darwin
 categories                  science
@@ -79,6 +79,9 @@ variant g95 conflicts gcc43 gcc44 description {Enable Fortran support with g95} 
     depends_lib-append      port:g95
     configure.args-delete   --disable-fortran-compiler-check --disable-f77 --disable-f90
     #-lfg95 required or the tests fail
+    configure.cppflags-append -DpgiFortran
+    configure.fflags-append -fno-second-underscore
+    configure.fcflags-append    -fno-second-underscore
     configure.ldflags-append    -lf95
     configure.fc            ${prefix}/bin/g95
     configure.f77           ${configure.fc}
