perforce: don't need to use "system" to extract
git-svn-id: https://svn.macports.org/repository/macports/trunk@70940 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/perforce/Portfile
+++ b/dports/devel/perforce/Portfile
@@ -36,9 +36,9 @@ checksums               p4      md5     e850f62223925c2a199ae402d9842417 \
                                 sha1    0383e5eb515ff1a4ecd6fb148aa544a49e68eb59 \
                                 rmd160  913efbe9b299030a143e3c6a1fbf672ec526d7b7
 
+extract.mkdir           yes
 extract {
-    system "mkdir -p ${worksrcpath}"
-    system "cp ${distpath}/* ${worksrcpath}/"
+    eval copy [glob ${distpath}/*] ${worksrcpath}
 }
 
 use_configure           no
