perforce: ensure universal variant can't be deselected and indicate supported_archs and universal_archs correctly
git-svn-id: https://svn.macports.org/repository/macports/trunk@70941 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/perforce/Portfile
+++ b/dports/devel/perforce/Portfile
@@ -65,10 +65,8 @@ variant server {
     }
 }
 
-default_variants +universal
+supported_archs             i386 ppc x86_64
+configure.universal_archs   i386 ppc x86_64
+default_variants            +universal
+variant_set                 universal
 variant universal {}
-pre-fetch {
-    if {![variant_isset universal]} {
-        return -code error "${name} is only available in a universal version"
-    }
-}
