perforce: update to 2010.1, now maintained by rambiusparkisanius; see #26253
git-svn-id: https://svn.macports.org/repository/macports/trunk@70942 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/perforce/Portfile
+++ b/dports/devel/perforce/Portfile
@@ -3,10 +3,10 @@
 PortSystem              1.0
 
 name                    perforce
-version                 2009.1
+version                 2010.1
 categories              devel
 platforms               darwin
-maintainers             nomaintainer
+maintainers             gmail.com:rambiusparkisanius
 
 description             Fast source code management system
 
@@ -23,15 +23,15 @@ worksrcdir              ${name}
 
 distfiles               p4:prog p4.1:man p4d:prog p4d.1:man
 
-checksums               p4      md5     e850f62223925c2a199ae402d9842417 \
-                                sha1    13c601dcf7801a459cf4095f5d5afa95ac6c1e84 \
-                                rmd160  133fb9ba0f7c9f297062e4e15e19a779d1b222be \
+checksums               p4      md5     4170d202a4bda079e334c7dc5c37c417 \
+                                sha1    c666bd19c6de7a1b7283c14c2f0cf8486c56c516 \
+                                rmd160  5b3fc0fa7cab9d4fcfd8a2e0675379d2a4cceb60 \
                         p4.1    md5     e5cada2f402e1e016be7999fdc49035d \
                                 sha1    f0740627c5232e2eb72a278fd62d5764b7fcbdbb \
                                 rmd160  c32ac846dfa8110fadba131ca4c7a3782cf1c180 \
-                        p4d     md5     0bf148cc2e76f51fe6b4ddeb7645a4db \
-                                sha1    9ce54008912e5955df679ee808b3beba31197ee2 \
-                                rmd160  cf41efd49556c63bce116ec03365782c31da5e03 \
+                        p4d     md5     dd2f6de1b1a57a70838379d425606896 \
+                                sha1    f26b2b1d2ff1437b343c9bd590f72a0c00846567 \
+                                rmd160  7957d8db3b6a2ec5e85fc291a03f746a15ea6b60 \
                         p4d.1   md5     1aa86f28ba0698266bf1dcaded3e4106 \
                                 sha1    0383e5eb515ff1a4ecd6fb148aa544a49e68eb59 \
                                 rmd160  913efbe9b299030a143e3c6a1fbf672ec526d7b7
