goffice: update to version 0.8.9.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70944 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/goffice/Portfile
+++ b/dports/gnome/goffice/Portfile
@@ -4,7 +4,7 @@
 PortSystem              1.0
 
 name                    goffice
-version                 0.8.0
+version                 0.8.9
 set branch              [join [lrange [split ${version} .] 0 1] .]
 description             GOffice is a library of document-centric objects and utilities.
 long_description        GOffice is a library of document-centric objects \
@@ -16,23 +16,17 @@ platforms               darwin
 homepage                http://freshmeat.net/projects/goffice/
 master_sites            gnome:sources/${name}/${branch}/
 use_bzip2               yes
-checksums               md5     afb3fcb152fb37ed433f30d1ed1e86e3 \
-                        sha1    8a5540f91cb1619ee1d96ee65856e81624743acd
+
+checksums               md5     4fb1fc1a3757341fae69194e8b396d8e \
+                        sha1    de1c4cbb7f5ab7d61f059df35b2f5f8450e55a70 \
+                        rmd160  831366c08fb1fa3620d3660cf81ec08c091f9fe5
 
 depends_build           port:intltool \
                         port:pkgconfig
-depends_lib             port:libart_lgpl \
-                        port:bzip2 \
-                        port:expat \
-                        port:gtk2 \
-                        port:jpeg \
-                        port:libglade2 \
+
+depends_lib             port:gconf \
                         port:libgsf \
                         port:libxml2
-
-configure.env           GMSGFMT=${prefix}/bin/msgfmt
-
-configure.args          --without-gnome
 
 use_parallel_build      yes
 
