gtkglext: fix build with current gtk2 (#25782)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70945 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gtkglext/Portfile
+++ b/dports/devel/gtkglext/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 PortGroup  muniversal 1.0
 name		gtkglext
 version		1.2.0
-revision        4
+revision        5
 categories	devel
 maintainers	lifehertz.com:jd
 description	OpenGL Extension to GTK
@@ -18,9 +18,13 @@ master_sites	sourceforge
 checksums	md5 5c3240bfc1b21becd33ce35c5abe6f8d
 depends_lib	port:gtk2
 
+patchfiles	patch-examples-pixmap-mixed.c.diff \
+		patch-examples-pixmap.c.diff \
+		patch-gtk-gtkglwidget.c.diff
+
 if {[variant_isset quartz]} {
 	configure.args --without-x
-	patchfiles	patch-configure.diff \
+	patchfiles-append	patch-configure.diff \
 				patch-makefile.in.diff \
 				patch-gdk-makefile.in.diff \
 				patch-gtk-makefile.in.diff \
