--- a/dports/gnome/gnumeric/Portfile
+++ b/dports/gnome/gnumeric/Portfile
@@ -4,8 +4,7 @@
 PortSystem 1.0
 
 name		gnumeric
-version		1.8.4
-revision        1
+version		1.10.9
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	A spreadsheet with gnome support.
 long_description	${description}
@@ -16,28 +15,30 @@ homepage	http://projects.gnome.org/gnumeric/
 
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2	yes
-checksums       md5     338f0084f04a16f78797ad01f85d3251 \
-                sha1    2d765b0d06509e0695c4d3ec96b94f8acba88735 \
-                rmd160  461ea59b2ce30d2ce7dd5bca2cea2c50b955dc57
-depends_lib	port:libgsf \
-                port:goffice \
-                port:libbonoboui \
-                port:libgnomeprintui \
-                port:libgnomeui \
-                port:py25-gtk
+
+checksums       md5     827343c8cb76862df5bfaecef2687d26 \
+                sha1    84d09704d73ba41a7d5df430169d1cde04c394b8 \
+                rmd160  21e31ed561ae587f230f9007949754eeefa13b43
+
 depends_build	port:gnome-doc-utils
 
-patchfiles      patch-plugins-python-loader-gnm-python.c \
-                patch-plugins-python-loader-py-gnumeric.c
+depends_lib	port:goffice \
+                port:libglade2 \
+                port:py26-gobject
 
-configure.args  --disable-scrollkeeper
-configure.python ${prefix}/bin/python2.5
+
+configure.args  --disable-schemas-install
+
+configure.python ${prefix}/bin/python2.6
+set python_framework ${frameworks_dir}/Python.framework/Versions/2.6
+configure.pkg_config_path ${python_framework}/lib/pkgconfig
 
 post-activate {
 	system "${prefix}/bin/scrollkeeper-update"
+        system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
+            gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
 livecheck.regex {LATEST-IS-(\d+(?:\.\d+)*)}
-
