gtkglext: define a quartz variant rather than just checking whether it's set when it doesn't exist
git-svn-id: https://svn.macports.org/repository/macports/trunk@70947 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gtkglext/Portfile
+++ b/dports/devel/gtkglext/Portfile
@@ -16,14 +16,21 @@ homepage	http://sourceforge.net/projects/gtkglext/
 master_sites	sourceforge
 
 checksums	md5 5c3240bfc1b21becd33ce35c5abe6f8d
-depends_lib	port:gtk2
+depends_lib	port:gtk2 \
+		port:mesa \
+		port:xorg-libXmu
 
 patchfiles	patch-examples-pixmap-mixed.c.diff \
 		patch-examples-pixmap.c.diff \
 		patch-gtk-gtkglwidget.c.diff
 
-if {[variant_isset quartz]} {
-	configure.args --without-x
+configure.args --x-include=${prefix}/include --x-lib=${prefix}/lib
+
+variant quartz {
+	configure.args-delete --x-include=${prefix}/include --x-lib=${prefix}/lib
+	configure.args-append --without-x
+	depends_lib-delete	port:mesa \
+				port:xorg-libXmu
 	patchfiles-append	patch-configure.diff \
 				patch-makefile.in.diff \
 				patch-gdk-makefile.in.diff \
@@ -35,9 +42,4 @@ if {[variant_isset quartz]} {
 	platform darwin 8 {
 			depends_lib-append port:xorg-glproto
 	}
-}
-if {![variant_isset quartz]} {
-	depends_lib-append	port:mesa \
-						port:xorg-libXmu
-	configure.args --x-include=${prefix}/include --x-lib=${prefix}/lib
 }
