--- a/dports/gnome/gnucash/Portfile
+++ b/dports/gnome/gnucash/Portfile
@@ -58,7 +58,8 @@ configure.args    --disable-glibtest \
 patchfiles        patch-configure.diff patch-lib_libc_libc-missing-noop.c.diff \
                   patch-src_bin_gnucash.in.diff \
                   patch-src_quotes_gnc-fq-dump.diff \
-                  patch-configure-darwin10.diff
+                  patch-configure-darwin10.diff \
+                  goffice08.patch
 
 post-patch {
     reinplace "s|DYLD_LIBRARY_PATH|DYLD_FALLBACK_LIBRARY_PATH|g" \
